ui/03-dc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: playground
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: 
      labels:
        deployment: playground
    spec:
      containers:
      - command:
        - streamlit
        - run
        - app.py
        - "--server.port=8501"
        - "--server.address=0.0.0.0"
        image: image-registry.openshift-image-registry.svc:5000/llamastack/playground@sha256:00a3008aa70832bc679513b21cacc4e2ae5e875ee648dfbd60264a8b2b42d65b
        imagePullPolicy: IfNotPresent
        name: playground
        ports:
        - containerPort: 8501
          protocol: TCP
        resources: {}
        terminationMessagePath: "/dev/termination-log"
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
