ui/04-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: playground
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8501
    protocol: TCP
    targetPort: 8501
  selector:
    deployment: playground
  sessionAffinity: None
  type: ClusterIP
