ui/05-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: playground
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: playground
    weight: 100
  wildcardPolicy: None
